Updates to add product form

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,3 +56,4 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 registerCommand.username.email.invalid=Username must be a valid email address
 registerCommand.username.nullable=Username is required
+healthProduct.productName.nullable=Product name is required
