adding duplicate product names bug fix

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,3 +57,4 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 registerCommand.username.email.invalid=Username must be a valid email address
 registerCommand.username.nullable=Username is required
 healthProduct.productName.nullable=Product name is required
+healthProduct.productName.unique=Can not add the same product twice
