--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,3 +58,4 @@ registerCommand.username.email.invalid=Username must be a valid email address
 registerCommand.username.nullable=Username is required
 healthProduct.productName.nullable=Product name is required
 healthProduct.productName.unique=Can not add the same product twice
+healthProduct.productName.duplicate=Can not add the same product twice
